--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.db
+fastapi.db
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,11 +106,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.venv3101
 env/
 venv/
+venv3101/
 ENV/
 env.bak/
 venv.bak/
+venv3101.bak/
 
 # Spyder project settings
 .spyderproject
@@ -130,3 +135,4 @@ dmypy.json
 
 # .idea
 .idea
+
